--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -115,6 +115,7 @@ Trial Run Unlimited Sessions<svg class="cta-icon" height="10" width="8"><use xli
     </div>
 </div>
 
+<!--
   <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
     <ol class="carousel-indicators">
       <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
@@ -140,6 +141,6 @@ Trial Run Unlimited Sessions<svg class="cta-icon" height="10" width="8"><use xli
       <span class="carousel-control-next-icon" aria-hidden="true"></span>
       <span class="sr-only">Next</span>
     </a>
-  </div>
+  </div> -->
 </div>
 
