--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -13,17 +13,39 @@
   <!-- End Search -->
 
 <div class="big-box" style="padding: 0px 10px;">
+  <div class="leftsidebox">
+
+  </div>
   <div class="cards-user">
     <% @therapists.each do |therapist| %>
       <figure class="snip1336">
         <img src="https://res.cloudinary.com/dnqrlagsz/image/upload/v1552391869/card-photo.png" alt="sample87" />
         <figcaption>
           <img src="https://source.unsplash.com/featured/?{people}<%= (1..1000).to_a.sample %>" alt="profile-sample4" class="profile" />
-        <h2><%= therapist.first_name %></h2>
-        <h2><%= therapist.last_name %><span><%= therapist.expertise %></span></h2>
-        <p>I'm looking for something that can deliver a 50-pound payload of snow on a small feminine target. Can you suggest something? Hello...? </p>
-          <%= link_to "Book", user_path(therapist), class: 'info' %>
-          <button class="follow" data-toggle="modal" data-target="#myModal_<%= therapist.id %>"> View </button>
+          <div class="card-details">
+            <h4><%= therapist.first_name %></h4>
+            <div class="review-stars">
+
+            <% numreviews = therapist.therapist_reviews.count %>
+            <% if numreviews != 0 %>
+              <% sum = 0 %>
+              <% therapist.therapist_reviews.each do |review| %>
+                <% sum += review.rating %>
+              <% end %>
+              <% stars = sum / numreviews  %>
+              <% stars.times do %>
+                <i class="far fa-star"></i>
+              <% end %>
+              </div>
+              </div>
+              <h4><%= therapist.last_name %></h4>
+              <h4><span><%= therapist.expertise %></span></h4>
+        <% end %>
+
+        <br>
+          <%= link_to "Book", user_path(therapist), class: 'primary-button' %>
+          <button class="primary-button" data-toggle="modal" data-target="#myModal_<%= therapist.id %>"> View </button>
+        <!--   <button class="primary-button" data-toggle="modal" data-target="#myModal_<%= therapist.id %>"> Book </button> -->
           <%# link_to "Book", user_path(therapist), class: 'follow' %>
         </figcaption>
       </figure>
