calendar new bookings

--- a/app/assets/stylesheets/components/_bookings_new.scss
+++ b/app/assets/stylesheets/components/_bookings_new.scss
@@ -19,6 +19,7 @@
       color: #FFFFFF;
       font-size: 24px;
       background-color: #6ECAD6;
+      border-radius: 5px;
     }
 
     .booking-update-btn {
