--- a/app/views/shared/_form.html.erb
+++ b/app/views/shared/_form.html.erb
@@ -17,7 +17,7 @@
         </div>
       <% end %>
       <div class="form-inputs">
-        <%= f.input :start_time, label: 'Date and Time' %>
+        <%= f.input :start_time %>
       </div>
       <div class="form-inputs">
         <%= f.input :description, label: 'Message the therapist',
