--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -11,3 +11,4 @@
 // Your CSS partials
 @import "components/index";
 @import "pages/index";
+// @import '../node_modules/flatpickr/dist/flatpickr.css';
