--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -65,7 +65,11 @@
 
 .dropdown-menu {
   a {
-    text-align: center;
-    margin: 0 0 0 0;
+    text-align: center !important;
+    margin: 0 0 0 0 !important;
   }
+}
+
+.black {
+  color: gray !important;
 }
