--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -29,8 +29,8 @@
         <ul class="nav-item dropdown">
           <%= image_tag "head.png", class: "avatar dropdown-toggle", id: "navbarDropdown", data: { toggle: "dropdown" }, 'aria-haspopup': true, 'aria-expanded': false %>
           <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdown">
-            <%= link_to "Settings", "#", class: "dropdown-item" %>
-            <%= link_to "Log out", destroy_user_session_path, method: :delete, class: "dropdown-item" %>
+            <%= link_to "Settings", "#", class: "dropdown-item black" %>
+            <%= link_to "Log out", destroy_user_session_path, method: :delete, class: "dropdown-item black" %>
           </ul>
           </div>
         </li>
