--- a/app/views/chat_rooms/show.html.erb
+++ b/app/views/chat_rooms/show.html.erb
@@ -73,7 +73,7 @@
 
         <div class="big-box">
           <div class="left-box">
-            <h1>Session with <%= @booking.therapist.full_name %>at <%= @booking.start_time %></h1>
+            <h1>Session with <%= @booking.therapist.full_name %>at <%= @booking.start_time.strftime('%Y-%m-%d') %></h1>
               <span class="js-btn btn"><i class="fas fa-video"></i></span>
                 <div class='js-fade is-hidden' id="remote-video-container">
                 <div id="video_overlays">
