--- a/app/views/users/_users.html.erb
+++ b/app/views/users/_users.html.erb
@@ -1,26 +1,37 @@
+<div class="cards-user">
+    <% @therapists.each do |therapist| %>
+      <figure class="snip1336">
+        <img src="https://res.cloudinary.com/dnqrlagsz/image/upload/v1552391869/card-photo.png" alt="sample87" />
+        <figcaption>
+          <img src="https://source.unsplash.com/featured/?{people}<%= (1..1000).to_a.sample %>" alt="profile-sample4" class="profile" />
+          <div class="card-details">
+            <h4><%= therapist.first_name %></h4>
+            <div class="review-stars">
 
-<div class="index-container">
-  <div class="big-box" style="padding: 0px 10px;">
-    <div class="lhs"></div>
-    <div class="container-holder">
-      <div class="row">
-        <% @therapists.each do |therapist| %>
-          <div class="col-sm-4" style="padding: 10px">
-            <div data-aos="flip-left" class="card1" style="background-image: linear-gradient(rgba(0,0,0,0), rgba(0,0,0,0)), url(<%= asset_path "card.png" %>)">
-                <div class="clipped-border" >
-                  <img src="https://source.unsplash.com/featured/?{people}<%= (1..1000).to_a.sample %>" id="clipped">
-                  <%= link_to "View", user_path(therapist), class: 'card-link' %>
-                </div>
-              <div class="card-description">
-                <p><%= therapist.first_name %></p>
-                <h2><%= therapist.last_name %></h2>
-                 <%= link_to "View", user_path(therapist), class: 'card-link' %>
-                  <%# cl_image_tag therapist.photo, height: 40, width: 40, crop: :fill, class: "avatar-small" %>
+            <% numreviews = therapist.therapist_reviews.count %>
+            <% if numreviews != 0 %>
+              <% sum = 0 %>
+              <% therapist.therapist_reviews.each do |review| %>
+                <% sum += review.rating %>
+              <% end %>
+              <% stars = sum / numreviews  %>
+              <% stars.times do %>
+                <i class="far fa-star"></i>
+              <% end %>
               </div>
-            </div>
-          </div>
+              </div>
+              <h4><%= therapist.last_name %></h4>
+              <h4><span><%= therapist.expertise %></span></h4>
         <% end %>
-      </div>
+
+        <br>
+          <%= link_to "Book", user_path(therapist), class: 'primary-button' %>
+          <button class="primary-button" data-toggle="modal" data-target="#myModal_<%= therapist.id %>"> View </button>
+        <!--   <button class="primary-button" data-toggle="modal" data-target="#myModal_<%= therapist.id %>"> Book </button> -->
+          <%# link_to "Book", user_path(therapist), class: 'follow' %>
+        </figcaption>
+      </figure>
+      <%= render "show_modal", therapist: therapist %>
+      <% end %>
     </div>
   </div>
-</div>
