--- a/app/assets/stylesheets/pages/_user_show.scss
+++ b/app/assets/stylesheets/pages/_user_show.scss
@@ -9,6 +9,7 @@
 
 .user-show-master-container {
   display: flex;
+  justify-content: space-between;
   .user-show-container {
     display: flex;
     background-color: white;
@@ -17,7 +18,10 @@
     width: 100%;
     .therapist-container {
       margin-top: 80px;
-      width: 50%
+      width: 50%;
+      display: flex;
+      flex-direction: column;
+
     }
     .therapist-avatar-container {
       border-radius: 100px;
@@ -38,11 +42,14 @@
     }
     .user-show-therapist-languages {
       display: flex;
+      flex-direction: row;
       justify-content: center;
+    .language-tag {
       border: solid 4px #74d5e0 ;
       border-radius: 12px;
       width: 30%;
       margin: 4px;
+      }
     }
     .user-show-expertise {
       width: 30%;
