adding meta tags and updating profile logo

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,3 +1,7 @@
+<% content_for :meta_title, "#{@user.full_name} is on #{DEFAULT_META["meta_product_name"]}" %>
+<% content_for :meta_description, @user.expertise %>
+
+
 <div class="banneri"  style="background-image: linear-gradient(rgba(0,0,0,0.1),rgba(0,0,0,0.5)), url(<%= asset_path "session-mountain.png" %>)">
 </div>
 
