--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -246,7 +246,7 @@ svg#dxp-curves, svg#commerce-curves, svg#analytics-cloud-curves {
 
 .home-middle {
   display: flex;
-  flex-direction: row;
+  justify-content: space-between;
   padding-left: 150px;
   background: white;
   p {
@@ -257,8 +257,9 @@ svg#dxp-curves, svg#commerce-curves, svg#analytics-cloud-curves {
   }
 }
 .middle-left{
-  display: flex;
-  flex-direction: column;
+  width: 25%;
+  margin: 128px;
+  justify-content: center;
 }
 .middle-icons{
   display: flex;
@@ -269,18 +270,18 @@ svg#dxp-curves, svg#commerce-curves, svg#analytics-cloud-curves {
 }
 
 .middle-someinfo {
-  width: 60vh;
 }
 .middle-img img {
   width: 756px;
   height: 640px;
   margin-left: 190px;
+  margin-top: 20px;
 }
 .info-img {
   display: flex;
   img {
     height: 45px;
     width: 145px;
-    margin: 15px;
+    margin: 0 20px 0 0;
   }
 }
