changed colour of the home main content, to match the colour scheme

--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -25,6 +25,9 @@
     text-align: center;
     margin: 0 0 50px 0;
   }
+  a {
+    color: #6ECAD6;
+  }
 }
 
 .carousel {
@@ -193,7 +196,7 @@ html, body {
 }
 
 .cta-link {
-  color: #0B63CE;
+  color: #489099;
   font-weight: 600;
   margin: 0;
   text-align: center;
