--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -20,7 +20,10 @@
 
 .homepage-content {
   background-size: cover;
-  margin: 50px 0 0 0;
+  height: 606px;
+  display: flex;
+  justify-content: center;
+  // margin: 50px 0 0 0;
   h2 {
     text-align: center;
     margin: 0 0 50px 0;
@@ -225,10 +228,10 @@ h3 {
 .max-width {
   align-items: center;
   display: flex;
-  margin: auto;
-  margin-top: 8em;
-  margin-bottom: 8em;
-  max-width: 75rem;
+  // margin: auto;
+  // margin-top: 8em;
+  // margin-bottom: 8em;
+  // max-width: 75rem;
 }
 
 .more-blue {
