--- a/app/assets/stylesheets/components/_bookings_new.scss
+++ b/app/assets/stylesheets/components/_bookings_new.scss
@@ -1,6 +1,6 @@
 .container-booking{
   display: flex;
-  justify-content: space-around;
+  justify-content: space-evenly;
   margin-top: 32px;
 
   .booking-box {
@@ -40,5 +40,11 @@
       }
     }
   }
-}
 
+  .booking-tables-right {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    width: 20%;
+  }
+}
