--- a/app/views/bookings/new.html.erb
+++ b/app/views/bookings/new.html.erb
@@ -1,16 +1,11 @@
-<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/flatpickr/dist/flatpickr.min.css">
-<script src="https://cdn.jsdelivr.net/npm/flatpickr" class="calendar_style"></script>
-<link rel="stylesheet" type="text/css" href="https://npmcdn.com/flatpickr/dist/themes/dark.css">
-<div class="container">
+<div class="container-booking">
+  <div class="booking-details-form">
+    <%= render 'shared/form', therapist: @therapist, booking: @booking %>
+  </div>
 
-  <%= render 'shared/form', therapist: @therapist, booking: @booking %>
+  <div class="booking-tables-right">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/flatpickr/dist/flatpickr.min.css">
+    <script src="https://cdn.jsdelivr.net/npm/flatpickr" class="calendar_style"></script>
+    <link rel="stylesheet" type="text/css" href="https://npmcdn.com/flatpickr/dist/themes/dark.css">
+  </div>
 </div>
-
-
-
-
-<style>
-  .calendar-style {
-    color: red;
-  }
-</style>
