--- a/app/views/shared/_form.html.erb
+++ b/app/views/shared/_form.html.erb
@@ -1,8 +1,6 @@
 <div class="container-booking">
   <div class="booking-box">
-      <br>
-      <div class='booking-title'>BOOKING SESSION...</div>
-      <br>
+    <div class='booking-title'>BOOKING SESSION...</div>
     <%= simple_form_for([therapist, booking]) do |f| %>
       <% if @booking.errors.any? %>
         <div class="errors-container">
@@ -17,9 +15,6 @@
         </div>
       <% end %>
       <div class="form-inputs">
-          <%= f.input :start_time %>
-      </div>
-      <div class="form-inputs">
         <%= f.input :description, label: 'Message the therapist',
         placeholder: "Briefly describe your story so the therapist can provide the best support...", input_html: { class: 'input-description'} %>
       </div>
@@ -29,5 +24,12 @@
         </div>
       </div>
     <% end %>
+  </div>
+    <div class="booking-tables-right">
+      <%= simple_form_for([therapist, booking]) do |c| %>
+        <div class="form-inputs">
+          <%= c.input :start_time %>
+        </div>
+      <% end %>
   </div>
 </div>
