fixed new booking css

--- a/app/assets/stylesheets/components/_button.scss
+++ b/app/assets/stylesheets/components/_button.scss
@@ -11,7 +11,7 @@
   margin: 4px 2px;
   cursor: pointer;
   border-radius: 4px !important;
-  &:hover {
+  &:hover, &:focus {
     background: #74d5e0 !important;
     text-decoration: none;
     color: white;
@@ -29,7 +29,7 @@
   margin: 4px 2px;
   cursor: pointer;
   border-radius: 4px !important;
-  &:hover {
+  &:hover, &:focus {
     background: #55a9b2 !important;
     text-decoration: none;
     color: white;
