--- a/app/views/bookings/show.html.erb
+++ b/app/views/bookings/show.html.erb
@@ -111,6 +111,6 @@
           </div>
 </div>
 
-    <%= link_to "Chat", booking_chat_rooms_path(@booking), :method => :post , class: "btn btn-primary"%>
+    <%= link_to "Chat", booking_chat_rooms_path(@booking), :method => :post , class: "button-primary"%>
 
-    <%= link_to "Review your Therapist", new_booking_review_path(@booking), class: "btn btn-primary" %>
+    <%= link_to "Review your Therapist", new_booking_review_path(@booking), class: "button-primary" %>
