--- a/app/assets/stylesheets/components/_bookings_new.scss
+++ b/app/assets/stylesheets/components/_bookings_new.scss
@@ -7,11 +7,12 @@
     display: flex;
     flex-direction: column;
     background: white;
-    padding: 16px 32px;
     box-shadow: 0 10px 20px rgba(0,0,0,0.19), 0 6px 6px rgba(0,0,0,0.23);
     width: 900px;
+    border-radius: 8px;
 
     .booking-title {
+      border-radius: 8px 8px 0 0;
       display: flex;
       justify-content: space-around;
       font-weight: 700;
@@ -19,24 +20,27 @@
       color: #FFFFFF;
       font-size: 24px;
       background-color: #6ECAD6;
-      border-radius: 5px;
     }
 
-    .booking-update-btn {
-      display: flex;
-      justify-content: flex-end;
-      .btn-primary {
-        background-color: #6ECAD6;
-        border: none;
-        margin-left: auto;
-        margin-top: 10px;
-        margin-bottom: 10px;
+    .booking-box-details{
+      padding: 25px 30px;
+
+      .booking-update-btn {
+        display: flex;
+        justify-content: flex-end;
+        .btn-primary {
+          background-color: #6ECAD6;
+          border: none;
+          margin-left: auto;
+          margin-top: 10px;
+          margin-bottom: 10px;
+        }
       }
-    }
-    .input-description {
-      height: 300px !important;
-      &::placeholder {
-        color: rgba(103, 128, 159, 1);
+      .input-description {
+        height: 300px !important;
+        &::placeholder {
+          color: rgba(103, 128, 159, 1);
+        }
       }
     }
   }
