--- a/app/views/bookings/index.html.erb
+++ b/app/views/bookings/index.html.erb
@@ -23,7 +23,7 @@
         </tbody>
       </table>
   <div id="bookings-index-btn">
-    <%= link_to "Browse Therapist", users_path, class: "btn btn-primary" %>
+    <%= link_to "Browse Therapist", users_path, class: "button-primary" %>
   </div>
   </div>
 </div>
