--- a/app/views/devise/passwords/new.html.erb
+++ b/app/views/devise/passwords/new.html.erb
@@ -12,7 +12,7 @@
     </div>
 
     <div class="form-actions">
-      <%= f.button :submit, "Send me reset password instructions", class: "btn btn-primary" %>
+      <%= f.button :submit, "Send me reset password instructions", class: "button-primary" %>
     </div>
   <% end %>
 
