--- a/app/views/shared/_form.html.erb
+++ b/app/views/shared/_form.html.erb
@@ -1,31 +1,19 @@
 <div class="container-booking">
   <div class="booking-box">
-      <br>
-      <div class='booking-title'>BOOKING SESSION...</div>
-      <br>
+    <div class='booking-title'>BOOKING</div>
     <%= simple_form_for([therapist, booking]) do |f| %>
-      <% if @booking.errors.any? %>
-        <div class="errors-container">
-          <%= f.error_notification %>
-          <ul>
-            <br>
-            <% booking.errors.full_messages.each do |message| %>
-              <li><%= message %></li>
-            <% end %>
-            <br>
-          </ul>
+      <div class="booking-box-details">
+        <div class="form-inputs">
+          <%= f.input :start_time %>
         </div>
-      <% end %>
-      <div class="form-inputs">
-        <%= f.input :start_time %>
-      </div>
-      <div class="form-inputs">
-        <%= f.input :description, label: 'Message the therapist',
-        placeholder: "Briefly describe your story so the therapist can provide the best support...", input_html: { class: 'input-description'} %>
-      </div>
-      <div class="form-actions">
-        <div class="booking-update-btn">
-          <%= f.button :submit, class: "primary-button" %>
+        <div class="form-inputs">
+          <%= f.input :description, label: 'Message the therapist',
+          placeholder: "Briefly describe your story so the therapist can provide the best support...", input_html: { class: 'input-description'} %>
+        </div>
+        <div class="form-actions">
+          <div class="booking-update-btn">
+            <%= f.button :submit, class: "primary-button" %>
+          </div>
         </div>
       </div>
     <% end %>
