last css page to finish, solved issue with action cable! NO ONE, I MEAN NO ONE, ABSOLUTELY NO ONE TOUCH THE RANDOM USER NUMBER IN THE CHAT ROOM SHOW

--- a/app/assets/stylesheets/components/_messages.scss
+++ b/app/assets/stylesheets/components/_messages.scss
@@ -28,7 +28,7 @@
   }
 }
 .message-content {
-  background-color: #184980;
+  background-color: #86BB71;
   border-radius: 3px;
   margin: 0 10px;
   padding: 11px 10px 8px 10px;
