--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -11,10 +11,8 @@
   <% end %>
   <!-- End Search -->
 
-<div class="big-box" style="padding: 0px 10px;">
-  <div class="leftsidebox">
+<div class="container-holder">
 
-  </div>
   <div class="cards-user">
     <% @therapists.each do |therapist| %>
       <figure class="snip1336">
