--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -37,7 +37,7 @@
       <br>
 
       <div class="container-reviews">
-      <h4><span>Reviews</span></h4>
+      <div class="tables-title-row">Reviews</div>
         <% @reviews.each do |review| %>
         <div class="review-card">
           <h5><%= review.client.full_name %></h5>
