--- a/app/assets/stylesheets/pages/_user_show.scss
+++ b/app/assets/stylesheets/pages/_user_show.scss
@@ -60,7 +60,16 @@
     }
   }
 }
-
+.tables-title-row {
+    border-radius: 8px 8px 0 0;
+    display: flex;
+    justify-content: space-around;
+    font-weight: 700;
+    padding: 32px 0;
+    color: #FFFFFF;
+    font-size: 24px;
+    background-color: #6ECAD6;
+  }
 .therapist-reviews-container {
   height: 100%;
   width: 50%;
@@ -131,4 +140,9 @@
     border: solid;
     margin-top: 50px;
   }
+}
+
+.modal-content {
+    min-width: 900px !important;
+    margin: 30px auto !important;
 }
