--- a/app/assets/stylesheets/pages/_userindex.scss
+++ b/app/assets/stylesheets/pages/_userindex.scss
@@ -87,6 +87,7 @@
   max-width: 100%;
   vertical-align: top;
   opacity: 0.85;
+  border: 1px solid #6ECAD6;
 }
 .snip1336 figcaption {
   width: 100%;
@@ -105,6 +106,7 @@
   border-style: solid;
   border-width: 55px 0 0 400px;
   border-color: transparent transparent transparent white;
+  border: 0px 1px solid #6ECAD6;
 }
 .snip1336 figcaption a {
   padding: 5px;
