--- a/app/views/users/_show_modal.html.erb
+++ b/app/views/users/_show_modal.html.erb
@@ -1,71 +1,98 @@
 <div id="myModal_<%= therapist.id %>" class="modal fade" aria-labelledby="myLargeModalLabel" aria-hidden="true">
-    <div class="modal-dialog modal-xl">
-      <div class="modal-content">
-        <div class="banneri"  style="background-image: linear-gradient(rgba(0,0,0,0.1),rgba(0,0,0,0.5)), url(<%= asset_path "session-mountain.png" %>)">
-        </div>
+  <div class="modal-dialog modal-lg">
+    <div class="modal-content">
+      <div class="modal-body">
+        <div class="modal-content">
+          <div class="modal-banneri"  style="background-image: linear-gradient(rgba(0,0,0,0.1),rgba(0,0,0,0.5)), url(<%= asset_path "session-mountain.png" %>)">
+            </div>
+              <img class="modal-therapist-avatar-container" src="https://pbs.twimg.com/profile_images/876792863459352577/SBLRu4VV_400x400.jpg" alt="">
 
-<div class="user-show-master-container">
-  <div class="user-show-container">
-    <img class="therapist-avatar-container" src="https://pbs.twimg.com/profile_images/876792863459352577/SBLRu4VV_400x400.jpg" alt="">
-    <div class="therapist-container">
-      <div class="user-show-therapist-name">
-        <h2><strong><%= therapist.first_name %> <%= therapist.last_name %></strong></h2>
-      </div>
-      <div class="user-show-therapist-address">
-        <h4><%= therapist.address %></h4>
-      </div>
-      <div class="user-show-therapist-languages">
-        <%= therapist.languages.each do |language|%>
-        <h5><strong><%= language %></strong></h5>
-        <% end %>
-      </div>
-      <div class="user-show-expertise">
-        <h5><strong><%= therapist.expertise%></strong></h5>
-      </div>
-      <br>
-      <div class="user-show-therapist-description">
-        <%= therapist.bio %>
-      </div>
-    </div>
 
-    <div class="therapist-reviews-container">
-      <div class="user-show-book-btn">
-        <h3>Price</h3>
-        <%= link_to "Book", new_user_booking_path(therapist), class: "primary-button-user-show"%>
-      </div>
-      <br>
-      <br>
-      <h4>Reviews</h4>
-
-      <div class="container-reviews">
-        <% if therapist.therapist_reviews != nil %>
-        <% therapist.therapist_reviews.each do |review| %>
-        <div class="review-card">
-          <p><%= review.client.first_name %><%= review.client.first_name %></p>
-          <%# review.client_id.photo.url %>
-          <%= review.description %>
-          <% counter = 0 %>
-          <div class="review-icons-container d-flex flex-row">
-            <% 5.times do %>
-            <i class="fa <%= review.rating > counter ? 'fa-star' : 'fa-star-o' %>"></i>
-            <% counter += 1 %>
-            <% end %>
+            <div class="modal-master-box">
+              <div class="modal-left-side">
+                <div class="modal-user-show-therapist-name">
+                  <h3><strong><%= therapist.first_name %> <%= therapist.last_name %></strong></h3>
+                </div>
+                <div class="modal-user-show-therapist-address">
+                  <h4><%= therapist.address %></h4>
+                </div>
+                <div class="modal-user-show-therapist-languages">
+                  <% therapist.languages.each do |language|%>
+                  <%# raise %>
+                  <div class="modal-language">
+                    <p><%= language.language_name %></p>
+                    </div>
+                  <% end %>
+                </div>
+                <div class="modal-user-show-expertise">
+                  <p><%= therapist.expertise%></p>
+                </div>
+                <br>
+                <div class="modal-user-show-therapist-description">
+                  <%= therapist.bio %>
+                </div>
+              </div>
+              <div class="modal-right-side">
+                <div class="modal-user-show-book-btn">
+                  <h3>Price</h3>
+                  <%= link_to "Book", new_user_booking_path(therapist), class: "primary-button-user-show"%>
+                </div>
+                <br>
+                <br>
+                <div class="modal-container-reviews">
+                   <div class="tables-title-row">REVIEWS</div>
+                  <% if therapist.therapist_reviews != nil %>
+                    <% therapist.therapist_reviews.each do |review| %>
+                      <div class="modal-review-card">
+                        <p><%= review.client.first_name %><%= review.client.last_name %></p>
+                          <%# review.client_id.photo.url %>
+                          <%= review.description %>
+                          <% counter = 0 %>
+                            <div class="modal-review-icons-container d-flex flex-row">
+                            <% 5.times do %>
+                              <i class="fa <%= review.rating > counter ? 'fa-star' : 'fa-star-o' %>"></i>
+                              <% counter += 1 %>
+                            <% end %>
+                            </div>
+                      </div>
+                    <% end %>
+                  <% end %>
+                </div>
+            </div>
           </div>
         </div>
-        <% end %>
-        <% end %>
       </div>
     </div>
   </div>
 </div>
 
-    <div class="map-container">
-      <div id="map" style="width: 62%;
-        height: 400px;"
-        data-markers="<%= @markers.to_json %>"
-        data-mapbox-api-key="<%= ENV['MAPBOX_API_KEY'] %>">
-      </div>
-      </div>
-    </div>
-  </div>
-</div>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
