--- a/app/views/shared/_form.html.erb
+++ b/app/views/shared/_form.html.erb
@@ -25,11 +25,21 @@
       </div>
     <% end %>
   </div>
-    <div class="booking-tables-right">
-      <%= simple_form_for([therapist, booking]) do |c| %>
-        <div class="form-inputs">
-          <%= c.input :start_time %>
-        </div>
-      <% end %>
+  <div class="booking-tables-right">
+    <div class="booking-calendar-right">
+    <%= simple_form_for([therapist, booking]) do |c| %>
+      <div class="form-inputs">
+        <%= c.input :start_time %>
+      </div>
+    <% end %>
+    </div>
+    <div class="booking-show-overview">
+      <div class="tables-title-row">THERAPIST</div>
+        <div class="profile-details">
+          <div class="detail-row"><%= image_tag "logo.png", class: "user-profile-avatar" %>
+          </div>
+          <h3 class="detail-row"><%= current_user.client_bookings.last.therapist.full_name.upcase %></h3>
+      </div>
+    </div>
   </div>
 </div>
