updated home html

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -55,7 +55,7 @@
             </svg>
             <h3>Group Therapy</h3>
             <div class="cta-link-container">
-            <p class="cta-link">Anonymous group therapy<svg class="cta-icon" height="10" width="8"><use xlink:href="#caret"></use></svg></p>
+            <p class="cta-link">Anonymous Group Therapy<svg class="cta-icon" height="10" width="8"><use xlink:href="#caret"></use></svg></p>
             </div>
           </div>
   <!--           commerce-curve -->
