chatroom css done

--- a/app/views/chat_rooms/show.html.erb
+++ b/app/views/chat_rooms/show.html.erb
@@ -72,7 +72,7 @@
         </div>
 
       <div class="video-chat-info">
-        <h1>Session with <%= @booking.therapist.full_name %>at <%= @booking.start_time.strftime('%Y-%m-%d') %>
+        <h1>Session with <%= @booking.therapist.full_name %>at <%= @booking.start_time %>
         </h1>
         <div>Random User ID:
       <span id="current-user"><%= @random_number %></span>
