--- a/app/assets/stylesheets/pages/_chatroomsshow.scss
+++ b/app/assets/stylesheets/pages/_chatroomsshow.scss
@@ -128,9 +128,11 @@ $feature : #4b9aaa;
 }
 .video-left-box {
   width: 50%;
+  margin: 10px;
 }
 .video-right-box {
   width: 50%;
+  padding: 10px;
   .chat-header {
     border-radius: 20px 20px 0px 0px;
     width: 100%;
@@ -170,6 +172,11 @@ $feature : #4b9aaa;
 }
 
 
-
+#local-video{
+  border: 2px solid #6ECAD6;
+  box-shadow: -15px 10px 12px 0px rgba(194,192,194,1);
+  border-radius: 20px;
+  width: 70%;
+}
 
 
