--- a/app/views/bookings/show.html.erb
+++ b/app/views/bookings/show.html.erb
@@ -79,7 +79,8 @@
   <div class="cardx">
     <div class="thumbnail"><img class="left" src="https://res.cloudinary.com/dnqrlagsz/image/upload/v1552398008/computer-contemporary-cup-1251833.jpg"/></div>
     <div class="right">
-      <h1><%= (@booking.start_time / 60 / 60.round(2)) %> Hours</h1>
+      <h1><%= (@booking.start_time).gsub(/\d{4}-\d{2}-\d{2}\s/,'') %> Start</h1>
+      <%# raise %>
       <div class="author"><img src="https://randomuser.me/api/portraits/men/95.jpg"/>
         <h4><%= @booking.therapist.first_name %> <%= @booking.therapist.last_name %></h4>
       </div>
@@ -88,8 +89,8 @@
       <strong>Status: <%= @booking.status %></strong>
     </div>
     <div class="abso">
-     <h3><%= (@booking.start_time).strftime("%dth") %> </h3>
-     <p><strong><%= (@booking.start_time).strftime("%B") %></strong></p></div>
+     <h3><%= (@booking.start_time).gsub(/\s\d{2}:\d{2}/, '').gsub(/\d{4}-\d{2}-/, '') %>th </h3>
+     <p><strong><%= Date::MONTHNAMES[(@booking.start_time).gsub(/\d{2}\s\d{2}:\d{2}/, '').gsub(/\d{4}-/, '').to_i] %></strong></p></div>
        <span class="d-inline-block" tabindex="0" data-toggle="tooltip" title="Booking">
         <%= link_to booking_chat_rooms_path(@booking), :method => :post do %>
           <div class="fab1"><i class="far fa-edit fa-3x"></i></div></a>
