--- a/app/views/bookings/_table.html.erb
+++ b/app/views/bookings/_table.html.erb
@@ -1,14 +1,14 @@
 <tr class="booking_<%= booking.id %>">
   <td><%= booking.therapist.full_name %></td>
   <td><%= booking.start_time %></td>
-  <td><%= booking.end_time %></td>
+  <td><%# booking.end_time %></td>
   <% if booking.status  %>
     <td><%= booking.status %></td>
   <% else %>
     <td>Pending Confirmation </td>
   <% end %>
   <td><%= (booking.start_time.to_date - Date.today).to_i  %></td>
-  <td><%= (booking.end_time - booking.start_time).to_i  %></td>
+  <td><%# (booking.end_time - booking.start_time).to_i  %></td>
   <td><%= link_to "View booking", booking_path(booking) %></td>
   <% if current_user.therapist %>
     <td>
