--- a/app/assets/stylesheets/pages/_payments_new.scss
+++ b/app/assets/stylesheets/pages/_payments_new.scss
@@ -27,10 +27,15 @@
       // border: solid gray 0.5px;
       // padding: 20px;
       // border-radius: 4px;
+      word-wrap: break-word;
+      // overflow-y: scroll;
+      overflow: auto;
+      z-index: auto;
+      position: relative;
+      height: 180px !important
     }
     .new-payment {
       text-align: end;
     }
   }
 }
-
