--- a/app/assets/stylesheets/pages/_user_show.scss
+++ b/app/assets/stylesheets/pages/_user_show.scss
@@ -90,7 +90,7 @@
     }
   }
   .container-reviews {
-    overflow: scroll;
+    overflow-y: scroll;
     margin-top: 40px;
     width: 600px;
     box-shadow: -12px 14px 5px 0px rgba(227,227,227,1);
