--- a/app/assets/stylesheets/components/_bookings_new.scss
+++ b/app/assets/stylesheets/components/_bookings_new.scss
@@ -17,7 +17,7 @@
       justify-content: space-around;
       font-weight: 700;
       padding: 32px 0;
-      color: #000000;
+      color: white;
       font-size: 24px;
       background-color: #6ECAD6;
     }
