changed button position

--- a/app/assets/stylesheets/pages/_reviews_new.scss
+++ b/app/assets/stylesheets/pages/_reviews_new.scss
@@ -22,5 +22,9 @@
     .review-box-details {
       padding: 25px 30px;
     }
+    .form-actions {
+      display: flex;
+      justify-content: flex-end;
+    }
   }
 }
