--- a/app/views/pages/profile.html.erb
+++ b/app/views/pages/profile.html.erb
@@ -14,14 +14,22 @@
         <% @booking.order("start_time asc").each do |booking| %>
           <div class="upcoming-details-row">
             <% if current_user.therapist %>
-              <div class="col upcoming-labels" data-label="User">
-                <%= image_tag "logo.png", class: "user-avatar" %>
-                <%= booking.client.full_name %>
+              <div class="col upcoming-labels upcoming-names" data-label="User">
+                <div class="upcoming-avatar">
+                  <%= image_tag "head.png", class: "user-avatar" %>
+                </div>
+                <div class="upcoming-full-name">
+                  <%= booking.client.full_name %>
+                </div>
               </div>
             <% else %>
-              <div class="col upcoming-labels" data-label="User">
-                <%= image_tag "logo.png", class: "user-avatar" %>
-                <%= booking.therapist.full_name %>
+              <div class="col upcoming-labels upcoming-names" data-label="User">
+                <div class="upcoming-avatar">
+                  <%= image_tag "head.png", class: "user-avatar" %>
+                </div>
+                <div class="upcoming-full-name">
+                  <%= booking.therapist.full_name %>
+                </div>
               </div>
             <% end %>
             <div class="col" data-label="Schedule"><%= booking.start_time %></div>
@@ -49,8 +57,10 @@
     <div class="tables-box">
       <div class="tables-title-row">PROFILE</div>
         <div class="profile-details">
-          <div class="detail-row"><%= image_tag "logo.png", class: "user-profile-avatar" %></div>
-          <h3 class="detail-row"><%= current_user.full_name.upcase %></h3>
+          <div class="head-row">
+            <%= image_tag "head.png", class: "user-profile-avatar" %>
+            <p><%= current_user.full_name.upcase %></p>
+          </div>
           <div class="detail-row"><%= link_to "Edit Profile", edit_user_registration_path, class: 'primary-button' %></div>
         </div>
     </div>
