--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -20,7 +20,7 @@
 
 .homepage-content {
   background-size: cover;
-  height: 606px;
+  height: 140vh;
   display: flex;
   justify-content: center;
   // margin: 50px 0 0 0;
@@ -253,7 +253,7 @@ svg#dxp-curves, svg#commerce-curves, svg#analytics-cloud-curves {
 .home-middle {
   display: flex;
   justify-content: space-between;
-  padding-left: 150px;
+  align-items: center;
   background: white;
   p {
     color: #BDC3C7;
@@ -261,28 +261,24 @@ svg#dxp-curves, svg#commerce-curves, svg#analytics-cloud-curves {
   h1 {
     color: #6ECAD6;
   }
+
+  .middle-info {
+    width: 500px;
+  }
 }
 .middle-left{
   width: 25%;
   margin: 128px;
-  justify-content: center;
 }
 .middle-icons{
   display: flex;
   justify-content: space-between;
-  margin-bottom: 35px;
-  margin-top: 35px;
+  margin: 35px 0;
+  width: 500px;
   color: #489099;
 }
 
-.middle-someinfo {
-}
-.middle-img img {
-  width: 756px;
-  height: 640px;
-  margin-left: 190px;
-  margin-top: 44px;
-}
+
 .info-img {
   display: flex;
   margin-top: 40px;
