--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,4 +1,3 @@
-
 <div class="banner">
   <div class="headers-text">
     <h1>THERAPY <font style="font-weight:bold; color:#6ECAD6">SESSIONS</font> MADE EASY</h1>
@@ -102,7 +101,7 @@ Trial Run Unlimited Sessions<svg class="cta-icon" height="10" width="8"><use xli
       <i class="fas fa-desktop fa-3x"></i>
       <i class="fas fa-laptop fa-3x"></i>
     </div>
-    <div class="middle-someinfo">
+    <div class="middle-info">
       <h1>Meaningful therapy from every device</h1>
       <p>It can be difficult to wait days or weeks until your next appointment. With Talkspace, you can send your therapist a message whenever you’re near a laptop, tablet, or smartphone. Your conversation carries over seamlessly across devices and uses banking-grade encryption to keep it safe and confidential.</p>
       <div class="info-img">
@@ -112,37 +111,7 @@ Trial Run Unlimited Sessions<svg class="cta-icon" height="10" width="8"><use xli
     </div>
   </div>
     <div class="middle-img">
-      <img src="https://res.cloudinary.com/dnqrlagsz/image/upload/v1552403104/devices_2x_1.png" alt="">
+      <%= image_tag "devices.png" %>
     </div>
 </div>
-
-<!--
-  <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
-    <ol class="carousel-indicators">
-      <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
-      <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
-      <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
-    </ol>
-    <div class="carousel-inner">
-      <div class="carousel-item active">
-        <img src="https://mir-s3-cdn-cf.behance.net/project_modules/max_3840/a6f05462094157.5a8e8aebce1c2.jpg" class="d-block w-100" alt="...">
-      </div>
-      <div class="carousel-item">
-        <img src="https://www.cstjean.qc.ca/sites/cstjean.qc.ca/files/2018-04/photoRAC_r%C3%A9duit.jpg" class="d-block w-100" alt="...">
-      </div>
-      <div class="carousel-item">
-        <img src="https://www.exertisgoconnect.nl/products/images/product-images/PLX-87670-02-04.jpg" class="d-block w-100" alt="...">
-      </div>
-    </div>
-    <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
-      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-      <span class="sr-only">Previous</span>
-    </a>
-    <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
-      <span class="carousel-control-next-icon" aria-hidden="true"></span>
-      <span class="sr-only">Next</span>
-    </a>
-  </div> -->
-</div>
-
 
