--- a/app/assets/stylesheets/pages/_index.scss
+++ b/app/assets/stylesheets/pages/_index.scss
@@ -1,7 +1,7 @@
 // Import page-specific CSS files here.
 @import "home";
 @import "profile";
-@import "userindex";
+@import "user_index";
 @import "chatroomsshow";
 @import "bookingsshow";
 @import "usersshow";
