switching branch to work on css

--- a/app/assets/stylesheets/pages/_bookingsshow.scss
+++ b/app/assets/stylesheets/pages/_bookingsshow.scss
@@ -97,7 +97,7 @@ img.left {
 
 h1 {
   padding-top: 15px;
-  font-size: 3.0rem;
+  font-size: 2.0rem;
   color: #4B4B4B;
 }
 
@@ -237,6 +237,8 @@ li {
   h3 {
     padding: 0;
     margin: 0;
+    color: #6ECAD6;
+    font-size: 2.5rem;
   }
   p {
     padding: 0;
