--- a/app/assets/stylesheets/pages/_payments_new.scss
+++ b/app/assets/stylesheets/pages/_payments_new.scss
@@ -6,14 +6,15 @@
     border-radius: 4px;
     padding: 40px;
     margin: 30px 0 30px 0;
-    width: 900px;
+    width: 600px;
+    height: 600px;
     .payments-new-therapist-avatar {
       display: flex;
       justify-content: center;
       img {
         border-radius: 100px;
-        height: 200px;
-        width: 200px;
+        height: 120px;
+        width: 120px;
       }
     }
     .payments-new-colour-block {
@@ -22,6 +23,12 @@
     }
     .payments-new-therapist-name {
       text-align: center;
+      .primary-colour {
+        color: #6ECAD6;
+      }
+      .secondary-colour {
+        color: #489099;
+      }
     }
     .payments-new-therapist-description {
       // border: solid gray 0.5px;
@@ -32,7 +39,7 @@
       overflow: auto;
       z-index: auto;
       position: relative;
-      height: 180px !important
+      height: 100px !important
     }
     .new-payment {
       text-align: end;
