fixed booking new

--- a/app/assets/stylesheets/pages/_index.scss
+++ b/app/assets/stylesheets/pages/_index.scss
@@ -3,7 +3,7 @@
 @import "profile";
 @import "user_index";
 @import "chatroomsshow";
-@import "bookingsshow";
+@import "bookings_show";
 @import "usersshow";
 @import "user_show";
 @import "show_modal";
