--- a/app/views/shared/_form.html.erb
+++ b/app/views/shared/_form.html.erb
@@ -12,6 +12,7 @@
         </div>
         <div class="form-actions">
           <div class="booking-update-btn">
+            <%= link_to "Back", users_path, class: "secondary-button" %>
             <%= f.button :submit, class: "primary-button" %>
           </div>
         </div>
