--- a/app/assets/stylesheets/components/_bookings_new.scss
+++ b/app/assets/stylesheets/components/_bookings_new.scss
@@ -1,14 +1,14 @@
 .container-booking{
   display: flex;
   justify-content: space-around;
-  margin-top: 32px;
+  margin: 32px;
 
   .booking-box {
     display: flex;
     flex-direction: column;
     background: white;
     box-shadow: 0 10px 20px rgba(0,0,0,0.19), 0 6px 6px rgba(0,0,0,0.23);
-    width: 900px;
+    width: 50vw;
     border-radius: 8px;
 
     .booking-title {
@@ -16,9 +16,9 @@
       display: flex;
       justify-content: space-around;
       font-weight: 700;
-      padding: 32px 0;
+      padding: 16px 0;
       color: #FFFFFF;
-      font-size: 24px;
+      font-size: 18px;
       background-color: #6ECAD6;
     }
 
@@ -27,7 +27,7 @@
 
       .booking-update-btn {
         display: flex;
-        justify-content: flex-end;
+        justify-content: space-between;
         .btn-primary {
           background-color: #6ECAD6;
           border: none;
