--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -21,7 +21,7 @@
   </div>
 </div>
 
-<div class="homepage-content">
+<div class="homepage-content" style=" background: #F5F5F5">
   <div class="max-width">
     <div class="card-container">
       <div id="card-dxp" class="card">
