--- a/app/assets/stylesheets/components/_messages.scss
+++ b/app/assets/stylesheets/components/_messages.scss
@@ -8,6 +8,8 @@
   border-bottom-width: 0;
   max-height: calc(100vh - 70px - 45px - 61px - 30px);
   overflow: scroll;
+  min-height: 35vh;
+  flex-grow: 1;
 }
 
 .message {
@@ -42,7 +44,7 @@
 #create-message {
   padding: 10px;
   background-color: #ffffff;
-  margin-bottom: 20px;
+  // margin-bottom: 20px;
   border: 1px solid #ececec;
 }
 .message_content {
@@ -63,7 +65,7 @@ input.form-control {
   background-color: #489099;
   color: white;
   padding: 10px 20px;
-  margin-top: 10px;
+  // margin-top: 10px;
   h4 {
     margin: 0;
   }
