--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -43,7 +43,7 @@
 <!--     <link href='https://api.tiles.mapbox.com/mapbox-gl-js/v0.53.1/mapbox-gl.css' rel='stylesheet' />
  -->
 
-  <body>
+  <body style="background: white">
     <% if action_name == "home" %>
       <%= render 'shared/navbar' %>
     <% else %>
